# VO

./: .gitignore  CMakeLists.txt  result.md  result.ods
Matlab_process/: WheelRadiusCalibrationGPS.m  bucketing.m  bucketing.m~  feature_correct.m  features.mat  load_feature.m  matlab.mat  plot_diff.m  viso_map.m  viso_map.m~
Matlab_process/CANdata/: UTM_E_0118_16.txt  UTM_N_0118_16.txt  speed_RL_0118_16.txt  speed_RR_0118_16.txt  yaw_0118_16.txt
src/: demo.cpp  matcher.h  tcouple.cpp  tcouple.h  viso_stereo.cpp  viso_stereo.h
src/demo/: demo.cpp
src/lib/: local_map.cpp  local_map.h  matcher.cpp  matcher.h  tcouple.cpp  tcouple.h  viso.cpp  viso.h  viso_stereo.cpp  viso_stereo.h
src/result_viso/: result_viso.cpp
